# musrfit-fork

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  config.h.in  configure.ac
src/: .kdbgrc.musrfit  CMakeLists.txt  Makefile  Makefile.am  Makefile.msr2msr  Makefile.musrfit  Makefile.musrparam  Makefile.musrt0  Makefile.musrview  README  ToDo.txt  addRun.cpp  any2many.cpp  dump_header.cpp  git_revision.sh  msr2data.cpp  msr2msr.cpp  msr2msr.pro  musrFT.cpp  musrRootValidation.cpp  musr_startup.xml  musrfit.cpp  musrfit.pro  musrfit_startup.xml  musrparam.cpp  musrt0.cpp  musrview.cpp  nexus_dump.cpp  read_musrRoot_runHeader.cpp  write_musrRoot_runHeader.cpp
src/classes/: BUILD  CMakeLists.txt  Makefile.PMusr  Makefile.PUserFcn  Makefile.am  PFindRun.cpp  PFitter.cpp  PFitterFcn.cpp  PFourier.cpp  PFourierCanvas.cpp  PFunction.cpp  PFunctionHandler.cpp  PMsr2Data.cpp  PMsrHandler.cpp  PMusr.cpp  PMusr.pc.in  PMusrCanvas.cpp  PMusrT0.cpp  PPrepFourier.cpp  PRgeHandler.cpp  PRgeHandler.pc.in  PRunAsymmetry.cpp  PRunAsymmetryBNMR.cpp  PRunAsymmetryRRF.cpp  PRunBase.cpp  PRunDataHandler.cpp  PRunListCollection.cpp  PRunMuMinus.cpp  PRunNonMusr.cpp  PRunRRF.cpp  PRunSingleHisto.cpp  PRunSingleHistoRRF.cpp  PStartupHandler.cpp  PTheory.cpp  PUserFcn.cpp  PUserFcnBase.cpp  PUserFcnBase.pc.in
src/include/: PFindRun.h  PFitter.h  PFitterFcn.h  PFourier.h  PFourierCanvas.h  PFourierCanvasLinkDef.h  PFunction.h  PFunctionGrammar.h  PFunctionHandler.h  PMsr2Data.h  PMsrHandler.h  PMusr.h  PMusrCanvas.h  PMusrCanvasLinkDef.h  PMusrT0.h  PMusrT0LinkDef.h  PPrepFourier.h  PRgeHandler.h  PRgeHandlerLinkDef.h  PRunAsymmetry.h  PRunAsymmetryBNMR.h  PRunAsymmetryRRF.h  PRunBase.h  PRunDataHandler.h  PRunListCollection.h  PRunMuMinus.h  PRunNonMusr.h  PRunRRF.h  PRunSingleHisto.h  PRunSingleHistoRRF.h  PStartupHandler.h  PStartupHandlerLinkDef.h  PTheory.h  PUserFcn.h  PUserFcnBase.h  PUserFcnBaseLinkDef.h
src/musredit/: CMakeLists.txt  Makefile.am  PAdmin.cpp  PAdmin.h  PDumpOutputHandler.cpp  PDumpOutputHandler.h  PFileWatcher.cpp  PFileWatcher.h  PFindDialog.cpp  PFindDialog.h  PFitOutputHandler.cpp  PFitOutputHandler.h  PGetAsymmetryRunBlockDialog.cpp  PGetAsymmetryRunBlockDialog.h  PGetDefaultDialog.cpp  PGetDefaultDialog.h  PGetFourierBlockDialog.cpp  PGetFourierBlockDialog.h  PGetFunctionsBlockDialog.cpp  PGetFunctionsBlockDialog.h  PGetMusrFTOptionsDialog.cpp  PGetMusrFTOptionsDialog.h  PGetNonMusrRunBlockDialog.cpp  PGetNonMusrRunBlockDialog.h  PGetParameterBlockDialog.cpp  PGetParameterBlockDialog.h  PGetPlotBlockDialog.cpp  PGetPlotBlockDialog.h  PGetSingleHistoRunBlockDialog.cpp  PGetSingleHistoRunBlockDialog.h  PGetTheoryBlockDialog.cpp  PGetTheoryBlockDialog.h  PGetTitleBlockDialog.cpp  PGetTitleBlockDialog.h  PHelp.cpp  PHelp.h  PMsr2DataDialog.cpp  PMsr2DataDialog.h  PMusrEditAbout.cpp  PMusrEditAbout.h  (+19 more)
src/musredit/forms/: PFindDialog.ui  PGetAsymmetryRunBlockDialog.ui  PGetDefaultDialog.ui  PGetFourierBlockDialog.ui  PGetFunctionsBlockDialog.ui  PGetMusrFTOptionsDialog.ui  PGetNonMusrRunBlockDialog.ui  PGetParameterBlockDialog.ui  PGetPlotBlockDialog.ui  PGetSingleHistoRunBlockDialog.ui  PGetTheoryBlockDialog.ui  PGetTitleBlockDialog.ui  PMsr2DataDialog.ui  PMusrEditAbout.ui  PPrefsDialog.ui
src/musredit/images/: MuonSpin-Avatar.nb  musredit.icns  musrmsr2data.xpm  musrview.xpm
src/musredit/latex_images/: abragam.tex  asymmetry.tex  internalField.tex
src/musredit_qt5/: CMakeLists.txt  Makefile.am  PAdmin.cpp  PAdmin.h  PDumpOutputHandler.cpp  PDumpOutputHandler.h  PFindDialog.h  PFitOutputHandler.cpp  PFitOutputHandler.h  PGetAsymmetryRunBlockDialog.h  PGetDefaultDialog.h  PGetParameterBlockDialog.h  PGetSingleHistoRunBlockDialog.cpp  PGetTheoryBlockDialog.h  PGetTitleBlockDialog.cpp  PGetTitleBlockDialog.h  PHelp.cpp  PHelp.h  PMsr2DataDialog.cpp  PMusrEditAbout.cpp  PMusrEditAbout.h  PPrefsDialog.cpp  PPrefsDialog.h  PReplaceConfirmationDialog.cpp  PReplaceConfirmationDialog.h  PSubTextEdit.cpp  PTextEdit.cpp  PTextEdit.h  main.cpp  musredit.dox  musredit.h  musredit.pro  musredit.qrc  musredit_startup.xml.in
src/musredit_qt5/forms/: PGetDefaultDialog.ui  PGetFourierBlockDialog.ui  PGetFunctionsBlockDialog.ui  PGetNonMusrRunBlockDialog.ui  PMsr2DataDialog.ui  PMusrEditAbout.ui  PPrefsDialog.ui  PReplaceDialog.ui
src/musredit_qt5/icons/: musrFT.xpm  musrasym.xpm  musrsinglehisto.xpm
src/musredit_qt5/images/: editfind.xpm  editnext.xpm  editprevious.xpm  filereload.xpm  musrdump.xpm  musrprefs.xpm  musrswap.xpm  musrt0.xpm
src/musredit_qt5/latex_images/: bessel.tex  generalExp.tex  polynom.tex  simpleExp.tex
src/musredit_qt5/mupp/: CMakeLists.txt  PGetNormValDialog.cpp  PGetNormValDialog.h  PVarDialog.cpp  PVarDialog.h  Pmupp.cpp  Pmupp.h  PmuppAdmin.cpp  PmuppAdmin.h  PmuppGui.cpp  PmuppGui.h  PmuppScript.cpp  PmuppScript.h  mupp.cpp  mupp.dox  mupp.h  mupp.qrc  mupp_startup.xml.in
src/musredit_qt5/musrStep/: CMakeLists.txt  LICENSE  PMusrStep.cpp  PMusrStep.h  musrStep  musrStep.cpp  musrStep.pro
src/musredit_qt5/musrWiz/: CMakeLists.txt  PAdmin.cpp  PAdmin.h  PInstrumentDef.cpp  (+12 more)
src/musredit_qt6/: CMakeLists.txt
src/musrgui/: CMakeLists.txt  PAdmin.cpp  PAdmin.h  PDumpOutputHandler.cpp  PDumpOutputHandler.h  PFileWatcher.cpp  PFileWatcher.h  PFindDialog.cpp  PFindDialog.h  PFitOutputHandler.cpp  PFitOutputHandler.h  PGetAsymmetryRunBlockDialog.cpp  PGetAsymmetryRunBlockDialog.h  PGetDefaultDialog.cpp  PGetDefaultDialog.h  PGetFourierDialog.cpp  PGetFourierDialog.h  PGetFunctionsBlockDialog.cpp  PGetFunctionsBlockDialog.h  PGetNonMusrRunBlockDialog.cpp  PGetNonMusrRunBlockDialog.h  PGetParameterDialog.cpp  PGetParameterDialog.h  PGetPlotDialog.cpp  PGetPlotDialog.h  PGetSingleHistoRunBlockDialog.cpp  PGetSingleHistoRunBlockDialog.h  PGetTheoryBlockDialog.cpp  PGetTheoryBlockDialog.h  PMlog2DbDialog.cpp  PMlog2DbDialog.h  PMsr2DataDialog.cpp  PMsr2DataDialog.h  PPrefsDialog.cpp  PPrefsDialog.h  PReplaceDialog.cpp  PReplaceDialog.h  PSubTextEdit.cpp  PSubTextEdit.h  PTextEdit.cpp  (+9 more)
(+813 files in other folders)
